--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -33,6 +33,6 @@
   - firstname: ["Max"]
     url: https://en.wikipedia.org/wiki/Max_Planck
 
-“Yao”:
-  - firstname:["Chao", "C."]
+"Yao":
+  - firstname: ["Chao", "C."]
     url: https://yaochao1986.github.io/
